[project]
name = "user_input"
version = "0.1.0"
description = ""
authors = [
    {name = "fanoway", email = "86997883+fanoway@users.noreply.github.com"},
]
dependencies = []
requires-python = ">=3.8"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/fanoway/user_input"

[project.optional-dependencies]
[tool]
[tool.pdm]
[tool.pdm.scripts]
tox_test = {cmd = "python -m tox"}
[tool.pdm.dev-dependencies]
dev = [
    "black>=21.12b0",
    "tox>=3.24.4",
    "mypy>=0.930",
    "pylint>=2.12.2",
    "flake8>=4.0.1",
    "pytest-cov>=3.0.0",
    "tox-pdm>=0.3.1",
]

[tool.black]
line-length = 88

[tool.tox]
# tox.ini
legacy_tox_ini = """
[tox]
isolated_build = True
isolated_build_env = testenv
envlist = py38

[testenv]
commands =
    black user_input/
    flake8 user_input/ --ignore E501
    mypy user_input/
    pylint user_input/ --exit-zero
    pylint user_input/ -E
    pytest --cov-report term-missing  --cov=user_input tests/
"""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

