[project]
name = "smart_inputs"
version = "0.4.0"
description = "Smarter Inputs for easier to read python"
readme = "README.md"
authors = [
    {name = "fanoway", email = "86997883+fanoway@users.noreply.github.com"},
]
dependencies = [
    ,
]
requires-python = ">=3.8"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/fanoway/smart_inputs"

[project.optional-dependencies]
[tool]
[tool.pdm]
[tool.pdm.scripts]
tox_test = {cmd = "python -m tox"}
docs = {cmd ="docs\\\\make.bat html"}
publish ={cmd ="twine upload dist/*"}
[tool.pdm.dev-dependencies]
dev = [
    "black>=21.12b0",
    "tox>=3.24.4",
    "mypy>=0.930",
    "pylint>=2.12.2",
    "flake8>=4.0.1",
    "pytest-cov>=3.0.0",
    "tox-pdm>=0.3.1",
    "sphinx>=4.3.2",
    "sphinx-rtd-theme>=1.0.0"
]

[tool.black]
line-length = 88

[tool.tox]
# tox.ini
legacy_tox_ini = """
[tox]
isolated_build = True
isolated_build_env = testenv
envlist = py38

[testenv]
commands =
    black smart_inputs/
    flake8 smart_inputs/ --ignore E501
    mypy smart_inputs/
    pylint smart_inputs/ --exit-zero
    pylint smart_inputs/ -E
    pytest --cov-report term-missing  --cov=smart_inputs tests/
"""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

